@@ -9027,7 +9027,7 @@ function(package, dir, lib.loc = NULL, chkInternal = FALSE)
         ## Arguments with no description.
         arg_table <- .Rd_get_argument_table(rd)
         arguments_with_no_description <-
-            arg_table[grepl("^[[:blank:]]*$", arg_table[, 2L]),
+            arg_table[grepl("^[[:space:]]*$", arg_table[, 2L]),
                       1L]
 
         ## Autogenerated Rd content which needs editing.
