@@ -197,6 +197,11 @@
       has arrived also when its EOF had been reached previously.  Thanks to
       Peter Meilstrup's report on R-devel and Ivan Krylov's report and
       patch proposal in \PR{18555}.
+
+      \item \code{tools::checkRdContents()} failed to detect empty
+      argument descriptions when they spanned multiple lines,
+      including those generated by \code{prompt()}.
+      These cases are now noted by \command{R CMD check}.
     }
   }
 }
